--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy:build": "yarn build && cp ./replace.sh ./build",
+    "deploy:start": "cd build && sh ./replace.sh REACT_APP_CUSTOM_KEY=cjfff" 
   },
   "eslintConfig": {
     "extends": [
