--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy:build": "yarn build && cp ./replace.sh ./build",
-    "deploy:start": "cd build && sh ./replace.sh REACT_APP_CUSTOM_KEY=cjfff" 
+    "deploy:build": "yarn build && cp ./replace.sh ./build && cp ./start.js ./build && cp ./.placeholder.env ./build/.env",
+    "deploy:start": "cd build && node start.js" 
   },
   "eslintConfig": {
     "extends": [
